--- a/public/ameca_nm.html
+++ b/public/ameca_nm.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liquidaciones - Ameca</title>
     <link rel='stylesheet' href='/amk.css'>
-	<script src='/scripts/amk.js'></script>
+	<script src='/amk.js'></script>
 </head>
 
 <body>
